--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
-  "name": "my-qwik-empty-starter",
-  "description": "Blank project with routing included",
+  "name": "uiplay",
+  "description": "UI wrapper for uxplay",
+  "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LuminescentDev/SimplyMC.git"
+  },
   "engines": {
     "node": "^18.17.0 || ^20.3.0 || >=21.0.0"
   },
@@ -12,6 +17,7 @@
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.types": "tsc --incremental --noEmit",
+    "build.tauri": "vite build -c adapters/static/vite.config.mts",
     "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
@@ -25,6 +31,7 @@
   "devDependencies": {
     "@builder.io/qwik": "^1.15.0",
     "@builder.io/qwik-city": "^1.15.0",
+    "@tauri-apps/cli": "^1.3.1",
     "@eslint/js": "latest",
     "@tailwindcss/vite": "^4.0.0",
     "@types/node": "20.14.11",
