--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/LuminescentDev/SimplyMC.git"
+    "url": "git+https://github.com/LuminescentDev/uiplay.git"
   },
   "engines": {
     "node": ">=21.0.0"
@@ -27,13 +27,15 @@
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
-    "qwik": "qwik"
+    "qwik": "qwik",
+    "tauri": "tauri"
   },
   "devDependencies": {
     "@anuragroy/tailwindcss-animate": "^1.0.6",
     "@builder.io/qwik": "^1.15.0",
     "@builder.io/qwik-city": "^1.15.0",
-    "@tauri-apps/cli": "^1.3.1",
+    "@tauri-apps/api": "2.0.0-alpha.4",
+    "@tauri-apps/cli": "2.0.0-alpha.9",
     "@eslint/js": "latest",
     "@luminescent/ui": "^5.0.1",
     "@luminescent/ui-qwik": "^5.0.1",
