--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "qwik": "qwik"
   },
   "devDependencies": {
+    "@anuragroy/tailwindcss-animate": "^1.0.6",
     "@builder.io/qwik": "^1.15.0",
     "@builder.io/qwik-city": "^1.15.0",
     "@tauri-apps/cli": "^1.3.1",
     "@eslint/js": "latest",
+    "@luminescent/ui": "^5.0.1",
+    "@luminescent/ui-qwik": "^5.0.1",
     "@tailwindcss/vite": "^4.0.0",
     "@types/node": "20.14.11",
     "eslint": "9.25.1",
