--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint": "9.25.1",
     "eslint-plugin-qwik": "^1.15.0",
     "globals": "16.0.0",
+    "lucide-icons-qwik": "^0.487.0",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.0.0",
