--- a/package.json
+++ b/package.json
@@ -34,26 +34,30 @@
     "@anuragroy/tailwindcss-animate": "^1.0.6",
     "@builder.io/qwik": "^1.15.0",
     "@builder.io/qwik-city": "^1.15.0",
-    "@tauri-apps/api": "2.0.0-alpha.4",
-    "@tauri-apps/cli": "2.0.0-alpha.9",
     "@eslint/js": "latest",
     "@luminescent/ui": "^5.0.1",
     "@luminescent/ui-qwik": "^5.0.1",
-    "@tailwindcss/vite": "^4.0.0",
-    "@types/node": "20.14.11",
-    "eslint": "9.25.1",
+    "@tailwindcss/vite": "^4.1.11",
+    "@tauri-apps/api": "2.7.0",
+    "@tauri-apps/cli": "2.7.1",
+    "@types/node": "24.1.0",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-search": "^0.15.0",
+    "@xterm/addon-web-links": "^0.11.0",
+    "@xterm/xterm": "^5.5.0",
+    "eslint": "9.31.0",
     "eslint-plugin-qwik": "^1.15.0",
-    "globals": "16.0.0",
-    "lucide-icons-qwik": "^0.487.0",
-    "prettier": "3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.0.0",
-    "typescript": "5.4.5",
-    "typescript-eslint": "8.26.1",
+    "globals": "16.3.0",
+    "lucide-icons-qwik": "^0.525.0",
+    "prettier": "3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "^4.1.11",
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.38.0",
     "typescript-plugin-css-modules": "latest",
     "undici": "*",
-    "vite": "5.3.5",
-    "vite-tsconfig-paths": "^4.2.1"
+    "vite": "7.0.5",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "packageManager": "pnpm@10.13.1"
 }
