--- a/package.json
+++ b/package.json
@@ -59,5 +59,10 @@
     "vite": "7.0.5",
     "vite-tsconfig-paths": "^5.1.4"
   },
-  "packageManager": "pnpm@10.13.1"
+  "packageManager": "pnpm@10.13.1",
+  "pnpm": {
+    "overrides": {
+      "stylus": "git+https://github.com/stylus/stylus.git"
+    }
+  }
 }
