--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "@tauri-apps/api": "2.7.0",
     "@tauri-apps/cli": "2.7.1",
+    "@tauri-apps/plugin-fs": "~2",
     "@types/node": "24.1.0",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-search": "^0.15.0",
