--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,3 +27,4 @@ tauri = { version = "2.7.0", features = [
 tauri-plugin-log = "2"
 tauri-plugin-fs = "2"
 discord-rich-presence = "0.2.5"
+regex = "1.11.1"
